# D3-DjORM-1-Pishem-pult-ohrany-banka

./: .gitignore  .replit  README.md  main.py  pyproject.toml  requirements.txt
datacenter/: active_passcards_view.py  functions.py  models.py  passcard_info_view.py  storage_information_view.py
datacenter/templates/: active_passcards.html  passcard_info.html  storage_information.html
project/: settings.py  urls.py
