[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ilya Osipov <070809010@mail.ru>"]
description = ""
name = "django-orm-standalone-5"
version = "0.1.0"
[tool.poetry.dependencies]
django = "^1.11.0"
psycopg2-binary = "^2.8"
python = "^3.7"
[tool.poetry.dev-dependencies]
