[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ilya Osipov <070809010@mail.ru>"]
description = ""
name = "django-orm-standalone-5"
version = "0.1.0"
[tool.poetry.dependencies]
django = "~3.2"
psycopg2-binary = "~2.9"
python = "^3.8"
[tool.poetry.dev-dependencies]
